force-app/main/default/objects/Reset_Password_Request__c/Reset_Password_Request__c.object-meta.xml
<CustomObject>
    <label>Reset Password Request</label>
    <nameField>
        <label>Password Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reset Password Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>