force-app/main/default/objects/Reset_Password_Request__c/fields/isAccountActivation__c.field-meta.xml
<CustomField>
    <fullName>isAccountActivation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAccountActivation</label>
    <type>Checkbox</type>
</CustomField>