force-app/main/default/objects/Reset_Password_Request__c/fields/LangCountry__c.field-meta.xml
<CustomField>
    <fullName>LangCountry__c</fullName>
    <label>LangCountry</label>
    <length>10</length>
    <type>Text</type>
</CustomField>