force-app/main/default/objects/Reset_Password_Request__c/fields/SessionInfo__c.field-meta.xml
<CustomField>
    <fullName>SessionInfo__c</fullName>
    <description>Store LV front session info</description>
    <label>SessionInfo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>