force-app/main/default/objects/Reset_Password_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TOKEN_ISSUED</fullName>
            </value>
            <value>
                <fullName>TOKEN_USED</fullName>
            </value>
            <value>
                <fullName>SESSION_INFO_RETRIEVED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>