force-app/main/default/objects/Reset_Password_Request__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <label>Token</label>
    <length>32</length>
    <type>Text</type>
</CustomField>